@@ -31,10 +31,11 @@ module Gluon
 
   # = application for Rack
   class Application
-    def initialize(logger, cmap, template_engine, service_man)
+    def initialize(logger, cmap, template_engine, config, service_man)
       @logger = logger
       @cmap = cmap
       @template_engine = template_engine
+      @config = config
       @service_man = service_man
       @page_list = []
       @default_app = nil
@@ -74,6 +75,7 @@ module Gluon
       r = RequestResponseContext.new(Rack::Request.new(env), Rack::Response.new)
       r.logger = @logger
       r.cmap = @cmap
+      r.config = @config
       r.backend_service = @service_man.new_services
 
       @logger.debug "script_name(#{r.equest.script_name.inspect}) + path_info(#{r.equest.path_info.inspect})" if @logger.debug?
